--- a/style.css
+++ b/style.css
@@ -3,3 +3,57 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+header {
+  width: 100%;
+  height: 50px;
+  background-color: #DD9A4B;
+}
+
+.main-content {
+  width: 960px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.main-container {
+  width: 300px;
+  height: 300px;
+  margin: 50px 30px 50px 0;
+  background-color: #EEEEEE;
+  padding: 10px 10px 0 10px;
+}
+
+.picture1 {
+  background-image: url(img/flow01.png);
+  width: 280px;
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.picture2 {
+  background-image: url(img/flow02.png);
+  width: 280px;
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.picture3 {
+  background-image: url(img/flow03.png);
+  width: 280px;
+  height: 150px;
+  background-position: bottom;
+  background-size: cover;
+}
+
+.title {
+  padding: 15px 0 5px 0;
+}
+
+.sentence {
+  font-size: 13px;
+}
+
