--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ header {
   margin: 50px 30px 50px 0;
   background-color: #EEEEEE;
   padding: 10px 10px 0 10px;
+  position: relative;
 }
 
 .picture1 {
@@ -49,11 +50,30 @@ header {
   background-size: cover;
 }
 
+.step {
+  width: 35px;
+  height: 20px;
+  font-size: 10px;
+  color: white;
+  background-color: #FF9A4B;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  display: flex;
+  line-height: 20px;
+}
+
 .title {
   padding: 15px 0 5px 0;
 }
 
 .sentence {
   font-size: 13px;
+}
+
+footer {
+  width: 100%;
+  height: 50px;
+  background-color: #AAAAAA;
 }
 
